--- a/root/package.json
+++ b/root/package.json
@@ -6,6 +6,7 @@
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-sass": "~0.7.3",
-	"grunt-wp-i18n": "~0.4.0"
+    "grunt-wp-i18n": "~0.4.0",
+    "grunt-po2mo": "~0.1.0"
   }
 }
